<resources>
    <string name="app_name">Camellap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Camellap</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_camellap">Camellap</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_finanzas">Finanzas</string>
    <string name="menu_contratantes">Contratantes</string>
    <string name="menu_personal">Personal</string>
    <string name="menu_basedatos">Base de Datos</string>

    <string name="nuevo_evento">Ingrese datos del nuevo Evento</string>
    <string name="fecha">Fecha(dd/mm/aaaa)</string>
    <string name="lugar">Lugar</string>
    <string name="costo">Costo</string>
    <string name="tematica">Tematica</string>
    <string name="enviar_info">Crear</string>

    <string name="guardar_info">Guardar</string>

    <string name="nuevo_material">Nuevo Material</string>
    <string name="material">Nombre del Material</string>
    <string name="catidad">Cantidad</string>
    <string name="nuevo_material_tiulo">Ingrese la informacion del nuevo material</string>

    <string name="nuevo_contratante">Nuevo Contratante</string>
    <string name="nuevo_contratante_tiulo">Ingrese la informacion del nuevo contratante</string>
    <string name="nombre_contratante">Nombre del Contratante</string>
    <string name="estado_contratante">Estado del pago</string>
    <string name="infoevento_contratante">Informacion de Evento</string>

    <string name="nuevo_personal">Nuevo Personal</string>
    <string name="nuevo_personal_tiulo">Ingrese la informacion del nuevo personal</string>
    <string name="nombre_personal">Nombre del Personal</string>
    <string name="apodo_personal">Apodo</string>
    <string name="experiencia_personal">Experiencia</string>
    <string name="cargo_personal">Cargo</string>

    <string name="contacto">Contacto</string>
    <string name="identificacion">Identificacion</string>

    <string name="nuevo_pago">Nuevo Pago</string>

    <string name="crear_basedatos">CREAR BASE DE DATOS</string>

    <string name="text_calendario_eventos">Calendario de Eventos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>