<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/imagen2"
            android:title="@string/menu_camellap" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_inventario" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_finanzas" />
        <item
            android:id="@+id/fragment_contratantes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contratantes" />
        <item
            android:id="@+id/fragment_personal"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_personal" />
    </group>
</menu>