<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.camellap.ui.camellap.HomeFragment"
        android:label="@string/menu_camellap"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.camellap.ui.inventario.GalleryFragment"
        android:label="@string/menu_inventario"
        tools:layout="@layout/fragment_inventario" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.camellap.ui.finanzas.SlideshowFragment"
        android:label="@string/menu_finanzas"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/fragment_contratantes"
        android:name="com.example.camellap.fragment_contratantes"
        android:label="fragment_contratantes"
        tools:layout="@layout/fragment_contratantes" />
</navigation>